# VGCN-BERT

./: .env  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  demo.py  get_sst_data.py  model_vanilla_vgcn_bert.py  model_vgcn_bert.py  prepare_data.py  pyproject.toml  train_vanilla_vgcn_bert.py  train_vgcn_bert.py  tree.txt  utils.py
old_version/: README.md
old_version/pytorch_pretrained_bert/: convert_openai_checkpoint_to_pytorch.py  convert_pytorch_checkpoint_to_tf.py  convert_tf_checkpoint_to_pytorch.py  file_utils.py  modeling_openai.py  modeling_transfo_xl_utilities.py  tokenization.py  tokenization_transfo_xl.py
old_version/vgcn_bert/: env_config.py  get_sst_data.py  train_vgcn_bert.py
pytorch_pretrained_bert/: __init__.py  convert_gpt2_checkpoint_to_pytorch.py  convert_openai_checkpoint_to_pytorch.py  convert_pytorch_checkpoint_to_tf.py  convert_tf_checkpoint_to_pytorch.py  convert_transfo_xl_checkpoint_to_pytorch.py  file_utils.py  modeling.py  modeling_gpt2.py  modeling_openai.py  modeling_transfo_xl.py  optimization.py  optimization_openai.py  tokenization.py  tokenization_gpt2.py  tokenization_openai.py  tokenization_transfo_xl.py
vgcn_bert/: README.md  __init__.py  config.json  configuration_vgcn_bert.py  modeling_vgcn_bert.py  prepare_data.py  train_vanilla_vgcn_bert.py  train_vgcn_bert.py  utils.py
vgcn_bert/models/: vanilla_vgcn_bert.py  vgcn_bert.py
